@@ -5,6 +5,8 @@ AUX restart-ds-admin 157 RMD160 9957bb2ef43d971b940b9fee05ca5a0ea8fbc996 SHA1 06
 AUX start-ds-admin 155 RMD160 fb62ec3a68ba7f41484d3f1b243b6568fa0e3bad SHA1 47626cfdb06b8d924a1a7123fdf9c553750bdea8 SHA256 09656430f4010f18e9ac752127b85bbfb722cbe471b9128cca6199df0944cb24
 AUX stop-ds-admin 154 RMD160 7d48cf82c397be8f58d610785449897af6e0519a SHA1 63feebb8f5460f9693b1d03cd59caf83d02a2107 SHA256 65941a5d8a32549e30a81a1e5a2d87a0bef3e1f34893e4332703b97562bed72c
 DIST 389-admin-1.1.8.tar.bz2 1037361 RMD160 56b0cb86ce388ad8dfb4a52dbeff56e3e7cc15b4 SHA1 4d1eb839581b21053f24f9f0908f20fe60a51c37 SHA256 76a5f8dc8bf41b271dc94efa53c762f3186a235d2be0dcbb6a2e9f1bb66da378
+DIST 389-admin-1.1.9.tar.bz2 1041465 RMD160 5801d1db3da583635cbb50b83b1ccc2b88523d7d SHA1 523d0c8b9c88c5c1c1312cc0e89ac15cd07a598c SHA256 0c33fe9f2677bcec83e73b9984dae798da4b382336e7b436db7a47c7860588be
 EBUILD 389-admin-1.1.8-r1.ebuild 1720 RMD160 331b00f2c00bbeca4412cb16f170446005d54ca1 SHA1 f9a0606da96df0e692ab99504ea4c1ed793e7b3a SHA256 b74e2ec94a561517f2f21092d5876a7dbe82264d57d97f41e9181093866bbeca
+EBUILD 389-admin-1.1.9.ebuild 1720 RMD160 331b00f2c00bbeca4412cb16f170446005d54ca1 SHA1 f9a0606da96df0e692ab99504ea4c1ed793e7b3a SHA256 b74e2ec94a561517f2f21092d5876a7dbe82264d57d97f41e9181093866bbeca
 MISC ChangeLog 3991 RMD160 04a3f0b54e1a62bf7a6d5c4730e0fb8dd04ed752 SHA1 e91945877c2ca3475c2c8ba2f08d9ca17c49b608 SHA256 68fb6eec9de1145a93d1c5f8982f102be0d87f90191569d7ed7ce81d955ad8b4
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
