@@ -3,7 +3,9 @@ AUX dirsrv.confd 72 RMD160 d5478a77018aeb727ba72217d3e67af3dcd669c9 SHA1 006d238
 AUX dirsrv.initd 2444 RMD160 64e8e82f46f5aaf70a15051c310f12ed574e3b1b SHA1 e824770616596dd5b94925ebc5fb64f5bfc07fcb SHA256 8701b1ed7a936f374b3dd0a9ef940b8e527a3468f52f3f2b9308cfaa8ad9714e
 DIST 389-ds-base-1.2.1.tar.bz2 2741710 RMD160 274c122ead57449a98e4ac1751a107323e3eaa48 SHA1 3f1bd4a07e35d030f1a0557fb933ac17ff727cfe SHA256 1da0036931a251683bb824882dc68c56206642b2814f5a00827ba8a038a857fc
 DIST 389-ds-base-1.2.2.tar.bz2 2742349 RMD160 82ee3cb53d1d84d9a0264032f807dbb9f74dc56f SHA1 459aa7228b7ef775db5ba588a6b795db997da4f4 SHA256 d118dfd98eacf66ef23738cb4d7cf71309ff8ffe1c003c8837ab75db215d7996
+DIST 389-ds-base-1.2.3.tar.bz2 2774708 RMD160 6297b163e84e3966f3973d8ba81f469c7d0db5dc SHA1 f1ed676a3fa2d118c4b57926502bcba9bcd413ef SHA256 d24d2a341bb1837cbaf6dcaf0c9566ea57ea2652f70446abcd7c00d8aed4c1e1
 EBUILD 389-ds-base-1.2.1-r1.ebuild 2129 RMD160 3081369e06b4128ab696aa1881f166d25bd0203a SHA1 b59aace7e7bb9517ac540f76ca9ddb473c4c2672 SHA256 d4e3677d0cbb505ee352089d3e0c741ea0ab196ce41ed068f623eec4aa7bef58
-EBUILD 389-ds-base-1.2.2.ebuild 2436 RMD160 1d4221b064abfef3ce6f33923f048804841ae674 SHA1 8690208e3724fe13c34bda2982cc07ca24e59028 SHA256 6840eab43cddc9e27cd308b617216b4c206b5c2c60e3d01f058f6d3f536b3447
-MISC ChangeLog 1363 RMD160 39251fec463f998ed7224f75f14e906b5c8f62b2 SHA1 f07ea2e6223edbaa9adc256e7660e7eaefc7a8ad SHA256 41f7ef806c02fedda394339941106f16c978ef3a0d621ba701a52342a7ea725a
+EBUILD 389-ds-base-1.2.2.ebuild 2324 RMD160 43ced4a86d55d8ab2f5c7b326dc733ed5129bf6a SHA1 34ead2d0444f5afd5d716a5ae64b167c2e7653b1 SHA256 c025061113d58888852457c3582a6b616efe6a5e5dfaec6bc5cb92b9aff0aa75
+EBUILD 389-ds-base-1.2.3.ebuild 2410 RMD160 4ca40a721840473ab0ade1e4dd81110006dc6f04 SHA1 a5accec2867c86801ffbe91550128a65e1ac1ae6 SHA256 f6cdcb6a474ed39fe74accc3af93d28e6915d969bcf95759a47046c1468650dc
+MISC ChangeLog 1487 RMD160 2a308cd30cc3bb2ebc5fbf0dc094609ac7109ac7 SHA1 1f62e42e13044aa296a38191b4901fbb59c7e547 SHA256 8f85c770061035b295ba8d452eba48d0c75cd337e1d4bd19db929f1be6a997c5
 MISC metadata.xml 645 RMD160 7a451e3cfa444b90f65f9d50c1432bafbccc7f7a SHA1 02920189eaf0ceb030af0461a623eef4967bf14a SHA256 7e1d68801a760b2381ac5609fe23f90ee86623b4db0f78839c36aabed3e86d52
