@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  389-ds-base-1.2.2.ebuild, +389-ds-base-1.2.3.ebuild:
+  version bump
+
   24 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   files/configure.ac.patch:
   fix configure patch - branding
